# uuid

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGES  CONTRIBUTORS  Demo.hs  Policy.md  README.md  cabal.bench.project  cabal.haskell-ci  cabal.project  cbits.c  cbits.h  uuid.cabal
.github/workflows/: haskell-ci-bench.yml  haskell-ci.yml
Data/: UUID.hs
Data/UUID/: Builder.hs  Internal.hs  Named.hs  Util.hs  V1.hs  V3.hs  V4.hs  V5.hs
Data/Word/: Util.hs
tests/: BenchByteString.hs  BenchUUID.hs  TestUUID.hs  summarize-bench-results.pl  uuid-tests.cabal
travis-scripts/: build.sh  install.sh
uuid/: CHANGES  CHANGES.md  Demo.hs  uuid.cabal
uuid-bench/: src-uuid  src-uuid-types  uuid-bench.cabal
uuid-bench/bench/: uuid-benchmark.hs  uuid-types-benchmark.hs
uuid-orphans/: LICENSE  uuid-orphans.cabal
uuid-orphans/Data/UUID/: Orphans.hs
uuid-types/: CHANGES  CONTRIBUTORS  ChangeLog.md  uuid-types.cabal
uuid-types/Data/UUID/: Types.hs
uuid-types/Data/UUID/Types/: Internal.hs
uuid-types/Data/UUID/Types/Internal/: Builder.hs
uuid-types/src/Data/UUID/: Types.hs
uuid-types/src/Data/UUID/Types/: Internal.hs
uuid-types/src/Data/UUID/Types/Internal/: Builder.hs
uuid-types/tests/: BenchByteString.hs  BenchUUID.hs  ByteOrder.hs  TestUUID.hs
uuid/Data/: UUID.hs
uuid/Data/UUID/: Named.hs  Quasi.hs  Util.hs  V1.hs  V3.hs  V4.hs  V5.hs
uuid/Data/Word/: Util.hs
uuid/src/Data/: UUID.hs
uuid/src/Data/UUID/: V1.hs  V3.hs  V4.hs  V7.hs
uuid/tests/: BenchUUID.hs  TestUUID.hs
