Name: uuid
Version: 1.2.0
Copyright: (c) 2008-2009 Antoine Latter
Author: Antoine Latter
Maintainer: aslatter@gmail.com
License: BSD3
License-file: LICENSE

Category: Data
Build-Type: Simple
Cabal-Version: >= 1.6

Description:
 This library is useful for creating, comparing, parsing and
 printing Universally Unique Identifiers.
 See <http://en.wikipedia.org/wiki/UUID> for the general idea. 

Synopsis: For creating, comparing, parsing and printing Universally Unique Identifiers

Homepage: http://projects.haskell.org/uuid/
Bug-Reports: mailto:aslatter@gmail.com

Extra-Source-Files:
     CHANGES
     CONTRIBUTORS

Flag test
  Description: Build unit test and benchmark programs.
  Default:     False

Library
 Build-Depends: random, binary, bytestring, Crypto, maccatcher,
                time, base >=3, base < 5

 Exposed-Modules:
   Data.UUID
   Data.UUID.V1
   Data.UUID.V3
   Data.UUID.V5

 Other-Modules:
   Data.UUID.Builder
   Data.UUID.Internal
   Data.UUID.Named

 Extensions: DeriveDataTypeable
 Ghc-Prof-Options:   -auto-all -caf-all
 Ghc-Shared-Options:
 Ghc-Options:        -Wall

Executable benchuuid
 Main-Is: BenchUUID.hs
 HS-Source-Dirs: tests .
 Extensions: DeriveDataTypeable, CPP
 If flag(test)
  Buildable: True
  Build-Depends: random, binary, bytestring, Crypto, maccatcher,
                 time, base >=3, base < 5, containers,
                 criterion >= 0.3 && < 0.5, parallel >= 2.1 && < 2.3
 Else
  Buildable: False

Executable testuuid
 Main-Is: TestUUID.hs
 HS-Source-Dirs: tests .
 Extensions: DeriveDataTypeable
 Ghc-Prof-Options:   -auto-all -caf-all
 Ghc-Shared-Options:
 Ghc-Options:        -Wall -fno-warn-orphans

 If flag(test)
  Buildable: True
  Build-Depends: random, binary, bytestring, Crypto, maccatcher,
                 time, base >=3, base < 5,
                 HUnit >=1.2 && < 1.3, QuickCheck >=1.2 && < 1.3
 Else
  Buildable: False

