Name: uuid
Version: 1.2.3
Copyright: (c) 2008-2011 Antoine Latter
Author: Antoine Latter
Maintainer: aslatter@gmail.com
License: BSD3
License-file: LICENSE

Category: Data
Build-Type: Simple
Cabal-Version: >= 1.8

Description:
 This library is useful for creating, comparing, parsing and
 printing Universally Unique Identifiers.
 See <http://en.wikipedia.org/wiki/UUID> for the general idea. 

Synopsis: For creating, comparing, parsing and printing Universally Unique Identifiers

Homepage: http://projects.haskell.org/uuid/
Bug-Reports: mailto:aslatter@gmail.com

Extra-Source-Files:
     CHANGES
     CONTRIBUTORS


Library
 Build-Depends: random, binary, bytestring, Crypto, maccatcher,
                time, base >=3, base < 5

 Exposed-Modules:
   Data.UUID
   Data.UUID.V1
   Data.UUID.V3
   Data.UUID.V5

 Other-Modules:
   Data.UUID.Builder
   Data.UUID.Internal
   Data.UUID.Named

 Extensions: DeriveDataTypeable
 Ghc-Prof-Options:   -auto-all -caf-all
 Ghc-Shared-Options:
 Ghc-Options:        -Wall

-- not strictly a test, but we want it to error if
-- it can't build
Test-Suite benchmark
    Type:              exitcode-stdio-1.0
    Main-is:           BenchUUID.hs
    Hs-source-dirs:    tests
    Extensions:        DeriveDataTypeable, CPP
    Build-depends:     base == 4.*, uuid, random, criterion >= 0.4 && < 0.6, mersenne-random-pure64,
                       bytestring == 0.9.*, containers == 0.4.*, deepseq == 1.1.*

Test-Suite testuuid
    Type:              exitcode-stdio-1.0
    Main-is:           TestUUID.hs
    Hs-source-dirs:    tests
    Extensions:        DeriveDataTypeable
    Ghc-Options:       -Wall -fno-warn-orphans
    Build-Depends:     random, bytestring, base >=3, base < 5, uuid,
                       HUnit >=1.2 && < 1.3, QuickCheck >=1.2 && < 1.3
