Name: uuid
Version: 1.3.8
Copyright: (c) 2008-2014 Antoine Latter
Author: Antoine Latter
Maintainer: aslatter@gmail.com
License: BSD3
License-file: LICENSE

Category: Data
Build-Type: Simple
Cabal-Version: >= 1.8

Description:
 This library is useful for creating, comparing, parsing and
 printing Universally Unique Identifiers.
 See <http://en.wikipedia.org/wiki/UUID> for the general idea.

Synopsis: For creating, comparing, parsing and printing Universally Unique Identifiers

Homepage: https://github.com/aslatter/uuid
Bug-Reports: https://github.com/aslatter/uuid/issues

Extra-Source-Files:
     CHANGES
     CONTRIBUTORS


Library
 Build-Depends: base >=3 && < 5,
                binary >= 0.4 && < 0.8,
                bytestring >= 0.9 && < 1.1,
                cryptohash >= 0.7 && < 0.12,
                deepseq >= 1.3 && < 1.5,
                hashable (>= 1.1.1.0 && < 1.2.0) || (>= 1.2.1 && < 1.3),
                network-info == 0.2.*,
                random >= 1.0.1 && < 1.2,
                time >= 1.1 && < 1.6

 Exposed-Modules:
   Data.UUID
   Data.UUID.Util
   Data.UUID.V1
   Data.UUID.V3
   Data.UUID.V4
   Data.UUID.V5

 Other-Modules:
   Data.UUID.Builder
   Data.UUID.Internal
   Data.UUID.Named
   Data.Word.Util

 Extensions: DeriveDataTypeable
 Ghc-Options:        -Wall

source-repository   head
  type:             git
  location:         https://github.com/aslatter/uuid.git

Test-Suite testuuid
    Type:              exitcode-stdio-1.0
    Main-is:           TestUUID.hs
    Hs-source-dirs:    tests
    Extensions:        DeriveDataTypeable
    Ghc-Options:       -Wall -fno-warn-orphans
    Build-Depends:     base >= 3 && < 5,
                       uuid,
                       bytestring >= 0.9 && < 1.1,
                       HUnit >=1.2 && < 1.3,
                       QuickCheck >=2.4 && < 2.8,
                       random >= 1.0.1 && < 1.2,
                       test-framework == 0.8.*,
                       test-framework-hunit == 0.3.*,
                       test-framework-quickcheck2 == 0.3.*

benchmark benchmark
    Type:              exitcode-stdio-1.0
    Main-is:           BenchUUID.hs
    Hs-source-dirs:    tests
    Extensions:        DeriveDataTypeable, CPP
    Ghc-Options:       -Wall -fno-warn-orphans
    Build-depends:     base == 4.*,
                       uuid,
                       bytestring >= 0.9 && < 1.1,
                       containers >= 0.4 && < 0.6,
                       criterion >= 0.4 && < 0.9,
                       deepseq >= 1.1 && < 1.4,
                       mersenne-random-pure64,
                       random >= 1.0.1 && < 1.2

benchmark benchbytestring
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    tests
  Main-Is:           BenchByteString.hs
  Ghc-Options:       -threaded -rtsopts -Wall -O2 -fno-warn-orphans
  Build-Depends:     base                 >= 4       && < 5
                   , uuid
                   , bytestring           >= 0.10
                   , criterion            >= 0.8
                   , random               >= 1.0
                   , QuickCheck           >= 2
