Name: uuid-tests
Version: 1.0.0
Copyright: (c) 2009 Antoine Latter
Author: Antoine Latter
Maintainer: aslatter@gmail.com
License: BSD3
License-file: ../LICENSE

Category: Data
Build-Type: Simple
Cabal-Version: >= 1.6

Description:
 This is a set of test programs for testing the uuid package. 

Synopsis: This is a set of test programs for testing the uuid package.

Homepage: http://community.haskell.org/~aslatter/code/uuid/
Bug-Reports: mailto:aslatter@gmail.com


Executable benchuuid
 Main-Is: BenchUUID.hs
 HS-Source-Dirs: . ..
 Build-Depends: random, binary, bytestring, Crypto, maccatcher,
                time, base >=3, base < 5,
                criterion >= 0.3 && < 0.4, parallel >= 2.1 && < 2.3

 Extensions: DeriveDataTypeable

