name:               uuid-orphans
version:            1.3.11
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
license-file:       LICENSE
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
bug-reports:        https://github.com/seereason/uuid-orphans
stability:          experimental
tested-with:        GHC == 7.10.2
synopsis:           Orphan instances for the UUID datatype
description:        Orphan instances for the UUID datatype.  Currently , instances
                    for SafeCopy and PathInfo are provided.  The package version number
                    is inherited from the current version of uuid.

library
  build-depends:
    base >= 4.2 && < 5,
    uuid-types >= 1.0.2,
    safecopy,
    text,
    web-routes
  ghc-options:      -Wall
  exposed-modules:  Data.UUID.Orphans
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/ddssff/uuid-orphans.git
