Name: uuid-types
Version: 1.0.3
Copyright: (c) 2008-2014 Antoine Latter
Author: Antoine Latter
Maintainer: hvr@gnu.org
License: BSD3
License-file: LICENSE
Category: Data
Build-Type: Simple
Cabal-Version: >= 1.8
Tested-With: GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

Synopsis: Type definitions for Universally Unique Identifiers
Description:
 This library contains type definitions for Universally Unique Identifiers
 and basic conversion functions.
 .
 See <http://en.wikipedia.org/wiki/UUID> for the general idea.

Homepage: https://github.com/hvr/uuid
Bug-Reports: https://github.com/hvr/uuid/issues

Extra-Source-Files:
    CHANGES

Source-Repository head
    Type:              git
    Location:          https://github.com/hvr/uuid.git
    Subdir:            uuid-types

Library
    Build-Depends:     base       >= 3       && < 5,
                       binary     >= 0.4     && < 0.9,
                       bytestring >= 0.9     && < 0.11,
                       deepseq    >= 1.3     && < 1.5,
                       hashable  (>= 1.1.1.0 && < 1.2) || (>= 1.2.1 && < 1.3),
                       random     >= 1.0.1   && < 1.2,
                       text       >= 1       && < 1.3

    Exposed-Modules:
      Data.UUID.Types
      -- Exposed for companion projects; *NOT* part of the official API:
      Data.UUID.Types.Internal.Builder
      Data.UUID.Types.Internal

    Extensions:        DeriveDataTypeable
    Other-Extensions:  TypeFamilies
    Ghc-Options:       -Wall

Test-Suite testuuid
    Type:              exitcode-stdio-1.0
    Main-is:           TestUUID.hs
    Hs-source-dirs:    tests
    Extensions:        DeriveDataTypeable
    Other-Extensions:  ViewPatterns
    Ghc-Options:       -Wall -fno-warn-orphans
    Build-Depends:     uuid-types
    Build-Depends:     base             >= 3    && < 5,
                       bytestring       >= 0.9  && < 0.11,
                       HUnit            >= 1.2  && < 1.4,
                       QuickCheck       >= 2.4  && < 2.10,
                       tasty            >= 0.10 && < 0.12,
                       tasty-hunit      == 0.9.*,
                       tasty-quickcheck == 0.8.*

benchmark benchmark
    Type:              exitcode-stdio-1.0
    Main-is:           BenchUUID.hs
    Hs-source-dirs:    tests
    Extensions:        DeriveDataTypeable
    Other-Extensions:  CPP
    Ghc-Options:       -Wall -fno-warn-orphans
    Build-Depends:     uuid-types
    Build-depends:     base       == 4.*,
                       bytestring >= 0.9   && < 0.11,
                       containers >= 0.4   && < 0.6,
                       criterion  >= 0.4   && < 1.2,
                       deepseq    >= 1.1   && < 1.5,
                       random     >= 1.0.1 && < 1.2
