cabal-version: 1.12
name: uuid
version: 1.3.13

Copyright: (c) 2008-2014 Antoine Latter
Author: Antoine Latter
Maintainer: hvr@gnu.org
License: BSD3
License-file: LICENSE
Category: Data
Build-Type: Simple
Tested-With: GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

Synopsis: For creating, comparing, parsing and printing Universally Unique Identifiers
Description:
 This library is useful for creating, comparing, parsing and
 printing Universally Unique Identifiers.
 .
 See <http://en.wikipedia.org/wiki/UUID> for the general idea.

Homepage: https://github.com/hvr/uuid
Bug-Reports: https://github.com/hvr/uuid/issues

Extra-Source-Files:
    CHANGES.md

Source-Repository head
    Type:              git
    Location:          https://github.com/hvr/uuid.git
    Subdir:            uuid

Library
    Build-Depends:     base            >= 4.3      && < 5
                     , binary          >= 0.4      && < 0.9
                     , bytestring      >= 0.10     && < 0.11
                     , cryptohash-sha1 >= 0.11.100 && < 0.12
                     , cryptohash-md5  >= 0.11.100 && < 0.12
                     , entropy         >= 0.3.7    && < 0.5
                     , network-info    == 0.2.*
                     , random          >= 1.0.1    && < 1.3
                     , time            >= 1.1      && < 1.10
                     , text            >= 1.2.3    && < 1.3
                     , uuid-types      >= 1.0.2    && < 2

    Exposed-Modules:
      Data.UUID
      Data.UUID.Util
      Data.UUID.V1
      Data.UUID.V3
      Data.UUID.V4
      Data.UUID.V5

    Other-Modules:
      Data.UUID.Named
      Data.Word.Util

    Default-Language:  Haskell2010
    Default-Extensions: DeriveDataTypeable
    Other-Extensions:  TypeFamilies
    Ghc-Options:       -Wall

Test-Suite testuuid
    Type:              exitcode-stdio-1.0
    Main-is:           TestUUID.hs
    Hs-source-dirs:    tests
    Default-Language:  Haskell2010
    Default-Extensions: DeriveDataTypeable
    Other-Extensions:  ViewPatterns
    Ghc-Options:       -Wall -fno-warn-orphans
    build-depends:     uuid
                       -- inherited constraints
                     , base
                     , bytestring
                     , random
                       -- deps w/o inherited constraints
                     , QuickCheck       >= 2.11 && < 2.16
                     , tasty            >= 1.0 && < 1.4
                     , tasty-hunit      == 0.10.*
                     , tasty-quickcheck == 0.10.*


benchmark benchmark
    Type:              exitcode-stdio-1.0
    Main-is:           BenchUUID.hs
    Hs-source-dirs:    tests
    Default-Language:  Haskell2010
    Default-Extensions: DeriveDataTypeable, CPP
    Ghc-Options:       -Wall -fno-warn-orphans
    build-depends:     uuid
                       -- inherited constraints
                     , base
                     , random
                       -- deps w/o inherited constraints
                     , gauge                  >= 0.1   && < 0.3
                     , mersenne-random-pure64 == 0.2.*
