cabal-version:      1.12
name:               uuid
version:            1.3.15
x-revision:         1
copyright:          (c) 2008-2014 Antoine Latter
author:             Antoine Latter
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
category:           Data
build-type:         Simple
tested-with:
  GHC ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.4
   || ==8.8.4
   || ==8.10.7
   || ==9.0.1

synopsis:
  For creating, comparing, parsing and printing Universally Unique Identifiers

description:
  This library is useful for creating, comparing, parsing and
  printing Universally Unique Identifiers.
  .
  See <http://en.wikipedia.org/wiki/UUID> for the general idea.

homepage:           https://github.com/haskell-hvr/uuid
bug-reports:        https://github.com/haskell-hvr/uuid/issues
extra-source-files: CHANGES.md

source-repository head
  type:     git
  location: https://github.com/haskell-hvr/uuid.git
  subdir:   uuid

library
  build-depends:
      base             >=4.5      && <5
    , binary           >=0.5.1.0  && <0.9
    , bytestring       >=0.9.2.1  && <0.12
    , cryptohash-md5   >=0.11.100 && <0.12
    , cryptohash-sha1  >=0.11.100 && <0.12
    , entropy          >=0.3.7    && <0.5
    , network-info     >=0.2      && <0.3
    , random           >=1.1      && <1.3
    , text             >=1.2.3.0  && <1.3 || >=2.0 && <2.1
    , time             >=1.4      && <1.12

  -- strict dependency on uuid-types,
  -- as we re-rexport datatype, thus leak instances etc.
  build-depends:
    uuid-types       >=1.0.5    && <1.0.6

  exposed-modules:
    Data.UUID
    Data.UUID.Util
    Data.UUID.V1
    Data.UUID.V3
    Data.UUID.V4
    Data.UUID.V5

  other-modules:
    Data.UUID.Named
    Data.Word.Util

  default-language:   Haskell2010
  default-extensions: DeriveDataTypeable
  other-extensions:   TypeFamilies
  ghc-options:        -Wall
  hs-source-dirs:     src

test-suite testuuid
  type:               exitcode-stdio-1.0
  main-is:            TestUUID.hs
  hs-source-dirs:     tests
  default-language:   Haskell2010
  default-extensions: DeriveDataTypeable
  other-extensions:   ViewPatterns
  ghc-options:        -Wall -fno-warn-orphans

  -- inherited constraints
  build-depends:
      base
    , bytestring
    , random
    , uuid

  -- deps w/o inherited constraints
  build-depends:
      QuickCheck        >=2.14.2  && <2.15
    , tasty             >=1.4.0.1 && <1.5
    , tasty-hunit       >=0.10    && <0.11
    , tasty-quickcheck  >=0.10    && <0.11
